--- a/TravelBooking/theme/templates/product_detail.html
+++ b/TravelBooking/theme/templates/product_detail.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% load static tailwind_tags %} {% block title %}
+{% extends 'base.html' %} {% load static tailwind_tags custom_tags%} {% block title %} 
+
 Destinations
 {% endblock %} {% tailwind_css %}
 <link
@@ -14,6 +15,7 @@ Destinations
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
 />
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 {% block content %}
@@ -129,7 +131,62 @@ Destinations
         </div>
       </div>
     </div>
-
+    
+    <div class="mt-8 p-6 shadow-lg rounded-lg bg-white">
+      <h2 class="text-2xl font-semibold">Product Reviews <i class="fas fa-comments"></i></h2>
+      <p class="text-gray-600 mb-4">{{ reviews|length }} Reviews</p>
+      <div class="space-y-4">
+        {% for review in reviews %}
+        <div class="bg-gray-100 p-4 rounded-lg hover:bg-gray-200 transition duration-200">
+          <div class="p-4 rounded-lg">
+            <div class="flex justify-between mb-2 items-center">
+              <div class="flex items-center">
+                
+                <p class="text-lg font-semibold"><i class="far fa-user"></i> {{ review.user.username }}</p>
+              </div>
+              <div class="flex items-center">
+                {% for _ in review.rating|get_range %}
+                <i class="fas fa-star text-yellow-500"></i> <!-- filled star -->
+                {% endfor %}
+                {% for _ in 5|get_range %}
+                {% if forloop.counter > review.rating %}
+                <i class="far fa-star text-gray-400"></i> <!-- empty star -->
+                {% endif %}
+                {% endfor %}
+              </div>
+            </div>
+            <p class="text-gray-700 mt-2">{{ review.review }}</p>
+            <p class="text-gray-500 text-sm mt-1">{{ review.date }}</p>
+          </div>
+        </div>
+        {% empty %}
+        <p>No reviews yet.</p>
+        {% endfor %}
+      </div>
+    </div>
+    
+  
+  <!-- Review form section -->
+  {% if user_booked_product %}
+  <div class="mt-8 p-6 shadow-lg rounded-lg bg-white">
+      <h2 class="text-2xl font-semibold">Submit a Review <i class="far fa-edit text-blue-500"></i></h2>
+      <form method="POST" class="mt-4">
+          {% csrf_token %}
+          <div class="mb-4">
+              <label for="id_review" class="block text-lg font-semibold mb-2"><i class="fas fa-comment text-blue-500"></i> Your Review:</label>
+              <textarea id="id_review" name="review" rows="4" class="w-full bg-gray-100 rounded-lg border-gray-300 focus:border-blue-500 focus:ring focus:ring-blue-200 transition duration-300"></textarea>
+          </div>
+          <div class="mb-4">
+              <label for="id_rating" class="block text-lg font-semibold mb-2"><i class="fas fa-star text-yellow-500"></i> Rating:</label>
+              {{ review_form.rating }}
+          </div>
+          <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded transition duration-300">Submit Review</button>
+      </form>
+  </div>
+  {% endif %}
+  
+  
+  
     
   </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
