--- a/TravelBooking/theme/templates/product_detail.html
+++ b/TravelBooking/theme/templates/product_detail.html
@@ -235,5 +235,12 @@ Destinations
       return false; // Prevent the default form submission
     }
   </script>
+  <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
+  {% for flashmsg in messages %}
+  <script>
+      alertify.set('notifier','position', 'top-right');
+      alertify.success('{{ flashmsg }}');
+  </script>
+  {% endfor %}
 </body>
 {% endblock %}
