--- a/TravelBooking/theme/templates/vendor_dashboard.html
+++ b/TravelBooking/theme/templates/vendor_dashboard.html
@@ -43,6 +43,11 @@
                 </a>
             </li>
             <li>
+                <a href="{% url 'vendor_reviews' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">
+                    <i class="fas fa-comments mr-2"></i>Reviews
+                </a>
+            </li>
+            <li>
                 <a href="{% url 'vendor_settings' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">
                     <i class="fas fa-cog mr-2"></i>Settings
                 </a>
