--- a/TravelBooking/theme/templates/vendor_edit_profile.html
+++ b/TravelBooking/theme/templates/vendor_edit_profile.html
@@ -37,6 +37,11 @@
                 </a>
             </li>
             <li>
+                <a href="{% url 'vendor_reviews' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">
+                    <i class="fas fa-comments mr-2"></i>Reviews
+                </a>
+            </li>
+            <li>
                 <a href="{% url 'vendor_settings' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">
                     <i class="fas fa-cog mr-2"></i>Settings
                 </a>
@@ -54,7 +59,7 @@
             <nav class="bg-white shadow-md">
                 <div class="max-w-7xl mx-auto px-4 py-2">
                     <div class="flex justify-between items-center">
-                        <h1 class="text-2xl font-semibold">Vendor Dashboard</h1>
+                        <h1 class="text-2xl font-semibold"><i class="fas fa-cog text-blue-500 mr-2"></i>Vendor Settings</h1>
                     </div>
                 </div>
             </nav>
