--- a/TravelBooking/theme/templates/compare.html
+++ b/TravelBooking/theme/templates/compare.html
@@ -23,25 +23,25 @@
 
 {% if selected_products %}
   <!-- Display selected products and comparison results side by side -->
-  <div class="flex flex-wrap justify-between">
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
     <!-- Display compared products side by side -->
     {% for product in selected_products %}
-      <div class="w-full md:w-1/2 mb-6 flex flex-col">
-        <h2 class="text-lg font-semibold mb-4">{{ product.title }}</h2>
-        <div class="bg-white p-6 rounded-lg shadow-md flex flex-col h-full">
-          <img src="{{ product.image.url }}" alt="{{ product.title }}" class="w-full mb-4 rounded" />
-          <p class="text-gray-700 mb-2"><strong>Category:</strong> {{ product.category.title }}</p>
-          <p class="text-gray-700 mb-2"><strong>Vendor:</strong> {{ product.user }}</p>
-          <p class="text-gray-700 mb-2"><strong>Price:</strong> Rs.{{ product.price }}</p>
-          <div class="mt-auto">
-            <a href="{% url 'product_detail' product.pid %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded inline-block">Read More</a>
-          </div>
+      <div class="flex flex-col bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300 mt-8">
+        <h2 class="text-xl font-semibold mb-4">{{ product.title }}</h2>
+        <img src="{{ product.image.url }}" alt="{{ product.title }}" class="w-full mb-4 rounded-lg object-cover">
+        <p class="text-gray-700 mb-2"><strong>Category:</strong> {{ product.category.title }}</p>
+        <p class="text-gray-700 mb-2"><strong>Vendor:</strong> {{ product.user }}</p>
+        <p class="text-gray-700 mb-2"><strong>Price:</strong> Rs.{{ product.price }}</p>
+        <div class="mt-auto">
+          <a href="{% url 'product_detail' product.pid %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded inline-block text-center transition-colors duration-300">Read More</a>
         </div>
       </div>
     {% endfor %}
 
+
+
     <!-- Display comparison results -->
-    <div class="w-full md:w-1/2 mb-6 flex flex-col">
+    <div class="w-full md:h-1/3mb-6 flex flex-col mb-2">
       {% if comparison_result %}
         <div class="bg-white p-6 rounded-lg shadow-md flex flex-col h-full">
           <h2 class="text-lg font-semibold mb-4"><i class="fas fa-balance-scale-right mr-2 text-blue-500"></i> Comparison Result</h2>
