--- a/TravelBooking/theme/templates/base.html
+++ b/TravelBooking/theme/templates/base.html
@@ -141,25 +141,25 @@
             <!-- Company Info -->
             <div class="text-center md:text-left">
                 <h2 class="font-semibold text-lg mb-2">Contact Info</h2>
-                <p>Lazimpat, Kathmandu</p>
-                <p>Phone: +977 9803288281</p>
+                <p class="text-sm">Lazimpat, Kathmandu</p>
+                <p class="text-sm">Phone: +977 9803288281</p>
             </div>
 
-            <!-- Contact Info -->
+            <!-- Adven Info -->
             <div class="text-center">
                 <h2 class="font-semibold text-lg mb-2">Adven</h2>
-                <p>© 2024 Adven. All rights reserved.</p>
-                
+                <p class="text-sm">&copy; 2024 Adven. All rights reserved.</p>
             </div>
 
-            <!-- Links -->
+            <!-- Quick Links -->
             <div class="text-center md:text-right">
                 <h2 class="font-semibold text-lg mb-2">Quick Links</h2>
-                <a href="{% url 'contact_us' %}" class="text-white underline hover:text-blue-200 block">Contact Us</a>
+                <a href="{% url 'contact_us' %}" class="text-white underline hover:text-blue-200 block text-sm">Contact Us</a>
             </div>
         </div>
     </div>
 </footer>
+
 
 
 <script>
