emails, image slider, ui

--- a/TravelBooking/theme/templates/change_password.html
+++ b/TravelBooking/theme/templates/change_password.html
@@ -11,9 +11,9 @@
 	
 	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>
 </head>
-<body class="bg-gray-100">
+<body class="bg-gradient-to-r from-blue-400 to-gray-200">
 
-<div class="container mx-auto mt-10">
+<div class="container mx-auto mt-20">
     <div class="max-w-md mx-auto bg-white p-8 rounded shadow-md">
         <h2 class="text-2xl font-bold mb-4">Change Password</h2>
         <form method="post">
