--- a/TravelBooking/theme/templates/vendor_reviews.html
+++ b/TravelBooking/theme/templates/vendor_reviews.html
@@ -103,6 +103,7 @@
                                 </div>
                                 
                                 <p class="text-gray-700">{{ review.review }}</p>
+                                <p class="text-gray-500 text-sm mt-1">{{ review.date }}</p>
                             </div>
                         {% endfor %}
                     </div>
