--- a/TravelBooking/theme/templates/base.html
+++ b/TravelBooking/theme/templates/base.html
@@ -59,14 +59,14 @@
                             Compare
                         </a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="{% url 'contact_us' %}" class="hover:text-blue-500 flex items-center">
                             <i class="fas fa-envelope mr-1 text-blue-500"></i> 
                             Contact Us
                         </a>
-                    </li>
+                    </li> -->
 					{% if user.is_authenticated %}
-						<li class="relative">
+						<li class="relative z-20">
 							<a id="profilebtn" class="hover:text-blue-500 cursor-pointer"><i class="fas fa-user text-blue-500 mr-1"></i> Profile</a>
 							<ul id="profileDropdown" class="absolute hidden bg-white shadow-md rounded mt-2 py-4 px-2 right-0"> 
 								<li><a href="{% url 'my_bookings' %}" class="flex items-center px-4 py-2 hover:bg-gray-200">
