--- a/TravelBooking/theme/templates/index.html
+++ b/TravelBooking/theme/templates/index.html
@@ -49,32 +49,45 @@
     </div>
 </div>
 
+<!-- Product Grid -->
 <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 mt-4">
     {% for product in products %}
-        <div class="relative bg-white rounded-lg shadow-md overflow-hidden">
+        <div class="flex flex-col h-full relative bg-white rounded-lg shadow-md overflow-hidden">
             <!-- Discount Badge -->
             {% if product.get_percentage > 0 %}
-                <div class="absolute top-0 left-0 bg-blue-500 text-white py-2 px-2 rounded-t-lg shadow-md">
+                <div class="absolute top-0 left-0 bg-blue-500 text-white py-1 px-2 rounded-tr-lg shadow-md">
                     <span class="text-xs font-semibold">-{{ product.get_percentage|default:"0"|floatformat:0 }}%</span>
                 </div>
             {% endif %}
-            <img src="{{ product.image.url }}" alt="{{ product.title }}" class="h-48 w-full object-cover rounded-t-lg">
-            <div class="p-6">
+            
+            <!-- Product Image -->
+            <img src="{{ product.image.url }}" alt="{{ product.title }}" class="h-48 w-full object-cover">
+            
+            <!-- Product Details -->
+            <div class="flex flex-col flex-grow p-6">
                 <h2 class="text-xl font-semibold mb-2">{{ product.title }}</h2>
                 <p class="text-gray-700 mb-2"><strong>Category:</strong> {{ product.category.title }}</p>
                 <p class="text-gray-700 mb-2"><strong>Vendor:</strong> {{ product.user }}</p>
-                <div class="flex items-center mb-2">
+                
+                <!-- Price -->
+                <div class="flex items-center mb-4">
                     <p class="text-gray-700 mr-2"><strong>Price:</strong></p>
-                    <p class="text-gray-900 text-lg font-semibold">Rs.{{ product.price }}</p>
+                    <p class="text-lg font-semibold text-gray-900">Rs.{{ product.price }}</p>
                     {% if product.get_percentage > 0 %}
                         <p class="text-sm ml-2 text-gray-500 line-through">Rs.{{ product.old_price }}</p>
                     {% endif %}
                 </div>
-                <a href="{% url 'product_detail' product.pid %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded inline-block">Read More</a>
+
+                <!-- Spacing Element for Button Alignment -->
+                <div class="mt-auto">
+                    <!-- Read More Button -->
+                    <a href="{% url 'product_detail' product.pid %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded inline-block w-full text-center">Read More</a>
+                </div>
             </div>
         </div>
     {% endfor %}
 </div>
+
 
 <hr class="my-12 border-t-2 border-gray-300 mb-8">
 
