--- a/TravelBooking/theme/templates/product_list.html
+++ b/TravelBooking/theme/templates/product_list.html
@@ -58,19 +58,19 @@
 <!-- Product Grid -->
 <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 mt-6">
     {% for product in products %}
-        <div class="relative bg-white rounded-lg shadow-md overflow-hidden">
+        <div class="flex flex-col h-full relative bg-white rounded-lg shadow-md overflow-hidden">
             <!-- Discount Badge -->
             {% if product.get_percentage > 0 %}
-                <div class="absolute top-0 left-0 bg-blue-500 text-white py-1 px-2 rounded-t-lg shadow-md">
+                <div class="absolute top-0 left-0 bg-blue-500 text-white py-1 px-2 rounded-br-lg shadow-md">
                     <span class="text-xs font-semibold">-{{ product.get_percentage|default:"0"|floatformat:0 }}%</span>
                 </div>
             {% endif %}
             
             <!-- Product Image -->
-            <img src="{{ product.image.url }}" alt="{{ product.title }}" class="h-48 w-full object-cover rounded-t-lg">
+            <img src="{{ product.image.url }}" alt="{{ product.title }}" class="h-48 w-full object-cover">
             
             <!-- Product Details -->
-            <div class="p-6">
+            <div class="flex flex-col flex-grow p-6">
                 <h2 class="text-xl font-semibold mb-2">{{ product.title }}</h2>
                 <p class="text-gray-700 mb-2"><strong>Category:</strong> {{ product.category.title }}</p>
                 <p class="text-gray-700 mb-2"><strong>Vendor:</strong> {{ product.user }}</p>
@@ -83,13 +83,15 @@
                         <p class="text-sm ml-2 text-gray-500 line-through">Rs.{{ product.old_price }}</p>
                     {% endif %}
                 </div>
-                
-                <!-- Book Now Button -->
-                <a href="{% url 'product_detail' product.pid %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded inline-block">Book Now</a>
+                <div class="mt-auto">
+                    <!-- Book Now Button -->
+                    <a href="{% url 'product_detail' product.pid %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded inline-block w-full text-center">Book Now</a>
+                </div>
             </div>
         </div>
     {% endfor %}
 </div>
+
 
 <!-- Pagination Controls -->
 <div class="mt-6 flex justify-center">
