--- a/TravelBooking/theme/templates/vendor_login.html
+++ b/TravelBooking/theme/templates/vendor_login.html
@@ -10,72 +10,62 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>	
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/> 
 </head>
-<body class="bg-gradient-to-r from-blue-400 to-indigo-600">
+<body class="bg-gradient-to-r from-blue-400 to-gray-200">
     <div class="flex justify-center items-center h-screen">
-        <div class="max-w-md w-full p-8 bg-white rounded-lg shadow-lg relative">
-            <div class="flex items-center justify-center mb-8">
-                <a href="{% url 'index' %}" class="flex items-center text-gray-800 hover:text-gray-900">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-blue-500 mr-2" viewBox="0 0 20 20" fill="currentColor">
-                        <path fill-rule="evenodd" d="M1 15.5c1.333-2 2-3.5 4-4.5s3-1.5 5-2.5c2-1 3.667-1.333 5-2.5 1.333-1.167 2-2.5 2-3.5s-0.667-2.5-2-3.5c-1.333-1-3-1.333-5-2.5C9 0.5 7.333 0 5 0c-1.333 0-2.333 0.5-3 1.5C1.333 3 1 4 1 5.5s0.667 2.5 2 3.5c1.333 1 2.667 1.333 4 2.5s2.667 2 4 4.5c1.333 2.5 2 4 2 6s-0.667 2.5-2 4c-1.333 1.5-2.667 2-4 3s-2.667 1-4 1s-2.667-0.5-4-1s-2.667-1.5-4-1c-1.333-0.5-2-1.5-2-3.5s0.667-3.5 2-6zM18.5 20c1-1.5 1.5-3 1.5-5s-0.5-3.5-1.5-5c-1-1.5-2.5-2.5-4-3.5c-1.5-1-3-1.5-4.5-2.5c-1.5-1-2.5-2-3.5-3.5s-1.5-3-1.5-5.5z" clip-rule="evenodd"/>
-                    </svg>
-                    <span class="text-xl font-semibold mr-10">Adven</span>
-					<span class="text-gray-900" id="greeting"></span> 
-                </a>
-            </div>
-            <!-- Close Button -->
-            <a href="{% url 'index' %}" class="absolute top-0 right-0 mt-4 mr-4 text-gray-600 hover:text-gray-800">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
-                </svg>
-            </a>
-            <!-- End of Close Button -->
+        
+        <div class="flex w-full max-w-4xl bg-white rounded-lg shadow-lg overflow-hidden">
+            <div class="hidden lg:block lg:w-1/2 bg-cover bg-center" style="background-image: url('/static/images/tyler-nix-q-motCAvPBM-unsplash.jpg'); background-size: cover; background-position: 0%;"></div>
+            
+            <div class="w-full lg:w-1/2 p-8">
+                <div class="flex items-center justify-center mb-8">
+                    <a href="{% url 'index' %}" class="flex items-center text-gray-800 hover:text-gray-900">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-blue-500 mr-2" viewBox="0 0 20 20" fill="currentColor">
+                            <path fill-rule="evenodd" d="M1 15.5c1.333-2 2-3.5 4-4.5s3-1.5 5-2.5c2-1 3.667-1.333 5-2.5 1.333-1.167 2-2.5 2-3.5s-0.667-2.5-2-3.5c-1.333-1-3-1.333-5-2.5C9 0.5 7.333 0 5 0c-1.333 0-2.333 0.5-3 1.5C1.333 3 1 4 1 5.5s0.667 2.5 2 3.5c1.333 1 2.667 1.333 4 2.5s2.667 2 4 4.5c1.333 2.5 2 4 2 6s-0.667 2.5-2 4c-1.333 1.5-2.667 2-4 3s-2.667 1-4 1s-2.667-0.5-4-1s-2.667-1.5-4-1c-1.333-0.5-2-1.5-2-3.5s0.667-3.5 2-6zM18.5 20c1-1.5 1.5-3 1.5-5s-0.5-3.5-1.5-5c-1-1.5-2.5-2.5-4-3.5c-1.5-1-3-1.5-4.5-2.5c-1.5-1-2.5-2-3.5-3.5s-1.5-3-1.5-5.5z" clip-rule="evenodd"/>
+                        </svg>
+                        <span class="text-xl font-semibold mr-10">Adven</span>
+						<span class="text-gray-900" id="greeting"></span> 
+                    </a>
+                </div>
 
-            <h1 class="text-2xl font-semibold mb-4 text-center">Vendor Login</h1>
-            <form action="{% url 'vendor_login' %}" method="post" class="space-y-4">
-                {% csrf_token %}
-                <div>
-                    <label for="username" class="block text-sm font-medium text-gray-700">Username</label>
-                    <input id="username" name="username" type="text" required 
-                           class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                <form action="{% url 'vendor_login' %}" method="post" class="space-y-4">
+                    {% csrf_token %}
+                    <div>
+                        <label for="username" class="block text-sm font-medium text-gray-700">Username</label>
+                        <input id="username" name="username" type="text" required 
+                               class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                    </div>
+                    <div>
+                        <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
+                        <input id="password" name="password" type="password" required 
+                               class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                    </div>
+                    <div>
+                        <button type="submit" class="w-full py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Login as Vendor</button>
+                    </div>
+                </form>
+                <a href="{% url 'forgot_password' %}" class="text-sm text-indigo-600 hover:text-indigo-800 ">Forgot password?</a>
+
+                <div class="flex justify-center mt-6">
+                    <p class="text-sm text-gray-600">Don't have an account? <a href="{% url 'vendor_register' %}" class="font-medium text-indigo-600 hover:text-indigo-800">Sign Up as Vendor</a></p>
                 </div>
-                <div>
-                    <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
-                    <input id="password" name="password" type="password" required 
-                           class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                <div class="flex justify-center items-center mt-4">
+                    <div class="border-t border-gray-300 w-full"></div>
+                    <p class="text-sm text-gray-600 px-4">Or</p>
+                    <div class="border-t border-gray-300 w-full"></div>
                 </div>
-                <div>
-                    <button type="submit" class="w-full py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Login</button>
+                <div class="flex justify-center mt-4">
+                    <p class="text-sm text-gray-600">Not a vendor? <a href="{% url 'login' %}" class="font-medium text-indigo-600 hover:text-indigo-800">Login as Customer</a></p>
                 </div>
-                <div class="text-sm text-center">
-                    {% for message in messages %}
-                    {% endfor %}
-                </div>
-            </form>
-            <a href="{% url 'forgot_password' %}" class="text-sm text-indigo-600 hover:text-indigo-800 ">Forgot password?</a>
-            <div class="flex justify-center mt-4">
-                <p class="text-sm text-gray-600">Sign Up as a <a href="{% url 'vendor_register' %}" class="font-medium text-indigo-600 hover:text-indigo-800">Vendor</a></p>
             </div>
-            <div class="flex justify-center items-center mt-4">
-                <div class="border-t border-gray-300 w-full"></div>
-                <p class="text-sm text-gray-600 px-4">Or</p>
-                <div class="border-t border-gray-300 w-full"></div>
-            </div>
-            
-            <div class="flex justify-center mt-6">
-                <p class="text-sm text-gray-600 item">Not a vendor? <a href="{% url 'login' %}" class="font-medium text-indigo-600 hover:text-indigo-800">Login as Customer</a></p>
-            </div>
-            
         </div>
     </div>
     <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
     {% for flashmsg in messages %}
     <script>
-        
-            alertify.set('notifier','position', 'top-right');
-            alertify.success('{{ flashmsg }}');
-        
+        alertify.set('notifier','position', 'top-right');
+        alertify.success('{{ flashmsg }}');
     </script>
     {% endfor %}
 </body>
