--- a/TravelBooking/theme/templates/vendor_register.html
+++ b/TravelBooking/theme/templates/vendor_register.html
@@ -12,7 +12,7 @@
 	<!-- Default theme -->
 	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>
 </head>
-<body class="bg-gradient-to-r from-blue-400 to-indigo-600 min-h-screen flex items-center justify-center">
+<body class="bg-gradient-to-r from-blue-400 to-gray-200 min-h-screen flex items-center justify-center">
     
     <form action="{% url 'register' %}" method="post" enctype="multipart/form-data" class="max-w-md w-full px-6 py-8 bg-white rounded-lg shadow-lg">
         <div class="flex items-center justify-center mb-8">
