--- a/TravelBooking/theme/templates/verify_email.html
+++ b/TravelBooking/theme/templates/verify_email.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>	
 </head>
-<body class="bg-gradient-to-r from-blue-400 to-indigo-600 flex justify-center items-center h-screen">
+<body class="bg-gradient-to-r from-blue-400 to-gray-200 flex justify-center items-center h-screen">
     <div class="container mx-auto max-w-md">
         <div class="bg-white rounded-lg shadow-lg p-8">
             <div class="flex justify-center mb-8">
@@ -43,3 +43,4 @@
     {% endfor %}
 </body>
 </html>
+
