--- a/TravelBooking/theme/templates/product_list.html
+++ b/TravelBooking/theme/templates/product_list.html
@@ -85,7 +85,7 @@
                 </div>
                 <div class="mt-auto">
                     <!-- Book Now Button -->
-                    <a href="{% url 'product_detail' product.pid %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded inline-block w-full text-center">Book Now</a>
+                    <a href="{% url 'product_detail' product.pid %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded inline-block w-full text-center">Read More</a>
                 </div>
             </div>
         </div>
