--- a/TravelBooking/theme/templates/register.html
+++ b/TravelBooking/theme/templates/register.html
@@ -42,7 +42,7 @@
                    class="px-4 py-2 w-full border border-gray-300 rounded-md focus:outline-none focus:border-indigo-500">
         </div>
         <div class="mb-4">
-            <input type="email" name="email" placeholder="Email Address" 
+            <input type="email" name="email" placeholder="Email Address" required
                    class="px-4 py-2 w-full border border-gray-300 rounded-md focus:outline-none focus:border-indigo-500">
         </div>
         
